# PhoscoinGUI

./: .gitmodules  CMakeLists.txt  COPYING  Makefile  Makefile-prepend  PSC.cmake  PhoscoinGui.pro  QREncode.cmake  README.md  copyright
src/: AliasProvider.cpp  AliasProvider.h  CommandLineParser.cpp  CommandLineParser.h  CryptoNoteWrapper.cpp  CryptoNoteWrapper.h  CurrencyAdapter.cpp  CurrencyAdapter.h  LoggerAdapter.cpp  LoggerAdapter.h  Miner.cpp  Miner.h  NodeAdapter.cpp  NodeAdapter.h  PSC.desktop.desktop.desktop  Settings.cpp  Settings.h  SignalHandler.cpp  SignalHandler.h  StratumClient.cpp  StratumClient.h  WalletAdapter.cpp  WalletAdapter.h  Worker.cpp  Worker.h  main.cpp  miniupnpcstrings.h
src/gui/: AboutDialog.cpp  AboutDialog.h  AddressBookDialog.cpp  AddressBookDialog.h  AddressBookFrame.cpp  AddressBookFrame.h  AddressBookModel.cpp  AnimatedLabel.cpp  AnimatedLabel.h  ChangePasswordDialog.cpp  ChangePasswordDialog.h  DepositDetailsDialog.cpp  DepositDetailsDialog.h  DepositListModel.cpp  DepositListModel.h  DepositModel.cpp  DepositModel.h  DepositsFrame.cpp  DepositsFrame.h  ExitWidget.cpp  ExitWidget.h  ImportKeyDialog.cpp  ImportKeyDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.mm  Message.cpp  Message.h  MessageAddressFrame.cpp  MessageAddressFrame.h  MessageDetailsDialog.cpp  MessageDetailsDialog.h  MessagesFrame.cpp  MessagesFrame.h  MessagesModel.cpp  MessagesModel.h  MiningFrame.cpp  MiningFrame.h  NewAddressDialog.cpp  NewAddressDialog.h  (+41 more)
src/gui/ui/: aboutdialog.ui  mainwindow.ui
src/images/: cryptonote.icns
